# cudawesome

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/basic/: addint.cu  addint_ptr.cu  addvec_blocks.cu  addvec_blocks_threads.cu  addvec_threads.cu  dotvec_blocks_threads.cu  dotvec_threads.cu  hello_world.cu  mtxset_nxm_grid2.cu  mtxset_nxn_grid2.cu
src/basic/integer/: integer_add.cu  integer_add_ptr.cu
src/basic/matrix/: matrix_add_nxm.cu  matrix_add_nxm_float.cu  matrix_add_nxm_int.cu  matrix_add_nxn.cu  matrix_add_nxn_float.cu  matrix_add_nxn_int.cu  matrix_initadd_int.cu  matrix_mul_nxm.cu  matrix_mul_nxm_float.cu  matrix_mul_nxm_int.cu  matrix_mul_nxn.cu  matrix_mul_nxn_float.cu  matrix_mul_nxn_int.cu  matrix_transfer_2d.cu  matrix_transfer_3d.cu
src/basic/rand/: curand.cu
src/basic/scaffolding/: hello_world.cu
src/basic/vector/: vector_add.cu  vector_add_blocks.cu  vector_add_blocks_threads.cu  vector_add_float.cu  vector_add_int.cu  vector_add_threads.cu  vector_dot.cu  vector_dot_blocks_threads.cu  vector_dot_float_1.cu  vector_dot_float_2.cu  vector_dot_float_3.cu  vector_dot_int_1.cu  vector_dot_int_2.cu  vector_dot_int_3.cu  vector_dot_threads.cu
src/basic/vector/dot/: vector_dot_float_1.cu  vector_dot_float_2.cu  vector_dot_float_3.cu  vector_dot_int_1.cu  vector_dot_int_2.cu  vector_dot_int_3.cu
src/basic/vector/sum/: vector_sum_float.cu  vector_sum_float_opt.cu  vector_sum_int.cu  vector_sum_int_opt.cu
src/common/: error.h  mathutil.h  matrix.h  parseutil.h  precision.h  random.h  vector.h
src/event/: event_matrix_mul.cu
src/flow/: sync_async.cu
src/info/: gpu_info.cu
src/ps-cuda/: Makefile  README.md  dwnout.sh
src/ps-cuda/profile/: profile.sh  profile_all.sh  profile_plot_time.m
src/ps-cuda/src/: ps_cuda.cu
src/ps-cuda/src/common/: error.h  mainutil.c  mainutil.h
src/ps-cuda/src/gpu/: ps.cu  ps.cuh  psutil.cuh
src/ps-cuda/test/: test-all.sh
src/scaffolding/: hello_world.c
src/scaffolding/include_c/: cpu_functions.c  cpu_functions.h
src/scaffolding/include_cu/: gpu_functions.cu  gpu_functions.cuh
